--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -9,7 +9,7 @@ FileName : main_nav.ejs
 <!--Main nav-->
 <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
    
-    <img src="/Assets/images/Logo2.png" alt="logo">
+    <img src="/Assets/images/bug(128).png" alt="logo">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
       aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
