Modified Contact page

--- a/server/views/partials/photo.ejs
+++ b/server/views/partials/photo.ejs
@@ -7,16 +7,14 @@ FileName : photo.ejs
 -->
 <!--Photo partial-->
 <div class="media">
-    <img src="/Assets/images/Foto.jpg" class="mr-3" alt="photo" height="400">
+    <img src="/Assets/images/bug.png" class="mr-3" alt="photo" height="400">
     <div class="media-body">
-      <h5 class="mt-0">About me</h5>
-      <p>My name is Jose Rogelio Aguilar Perdomo
-        <br> I was born in Mexico.
-        <br>I am getting an Advanced Diploma at Centennial College on
-        Software Engineering Technology.<br>
-        I also got a Bachelor's Degree in Mechatronics Engineering. <br><br>
+      <h5 class="mt-0">About Us</h5>
+      <p>Bug Busters
         
-        <button type="button" class="btn btn-dark" onclick="window.location.href='/Assets/resume.pdf'">Resume</button>
+        <br>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. <br><br>
+        
+        <button type="button" class="btn btn-dark" onclick="window.location.href='/Assets/resume.pdf'">WIP</button>
     
     </p>
     </div>
