--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -4,8 +4,8 @@
 
 <div class="jumbotron jumbotron-fluid">
   <div class="container">
-    <h1 class="display-4">Welcome to Jose Aguilar Web Services</h1>
-    <p class="lead">Personal portfolio of projects I've worked on.
+    <h1 class="display-4">Welcome to Bug Busters Survey Creator Service</h1>
+    <p class="lead">This tool will allow you to create and answer Surveys
     </p>
   </div>
 </div>
@@ -13,15 +13,12 @@
 <!-- Content for Main page-->
 <main class="container">
   
-    <p>This website contains some of the examples I've worked in during my career<br>
-      Please feel free to browse at your leisure and do not hesitate to <a href="/contact">Contact Us</a> if <br>
-      you have an inquiry.</p>
-    <h1 class="display-5"> Mission Statement</h1>
+    
+    <h1 class="display-5"> Survey Creation</h1>
     
     
-    <p>In Jose Aguilar Web services we are commited to deliver customized Web and Automation solutions. <br>
-      We specialize in <i>Key-in-hand</i> projects, aspiring to achieve the highest standards on the industry,<br>
-      reliability and quality. <br>
+    <p>Click the button on the Left to view the available Surveys. <br>
+      Click the button on the right to create your own Survey.
     </p>
     
   
