Modified contact page

--- a/server/views/partials/contact_details.ejs
+++ b/server/views/partials/contact_details.ejs
@@ -7,7 +7,7 @@ FileName : contact_details.ejs
 -->
 <div class="float-right">
 <div class="card" style="width: 18rem;">
-    <img src="/Assets/images/Logo2.png" class="card-img-top" alt="Logo">
+    <img src="/Assets/images/bug.png" class="card-img-top" alt="Logo">
     <div class="card-body">
       <h5 class="card-title">Contact Details</h5>
       <p class="card-text">Office Hours 9am - 9pm</p>
