--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -23,7 +23,7 @@
     
   
 
-  <button type="button" class="btn btn-dark" onclick="window.location.href='/about'">About Us</button>
+  <button type="button" class="btn btn-dark" onclick="window.location.href='/survey-list'">Survey List</button>
   <button type="button" class="btn btn-dark" onclick="window.location.href='/services'">Services</button>
 </main>
 
