modified main nav Survey List and Logo

--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -62,7 +62,7 @@ FileName : main_nav.ejs
           <li class="nav-item"></li>
           <% } %>
         
-          <a class="nav-link" href="/business-list"><i class="fas fa-lg fa-id-card"></i></i> Business Contact List </a>
+          <a class="nav-link" href="/survey-list"><i class="fas fa-lg fa-poll"></i></i> Survey List </a>
         </li>
 
 
