--- a/server/views/survey/list.ejs
+++ b/server/views/survey/list.ejs
@@ -29,40 +29,47 @@
                         <th class="text-center col-1"></th>
                         <th class="text-center col-1"></th>
                     <% } else { %>
-                        <th class="text-center col-2">Name</th>
-                        <th class="text-center col-2">Q1</th>
-                        <th class="text-center col-1">Answer 1</th>
-                        <th class="text-center col-2">Q2</th>
-                        <th class="text-center col-1">Answer 2</th>
-                        <th class="text-center col-2">Q3</th>
-                        <th class="text-center col-1">Answer 3</th>
+                        <th class="text-center col-3">Name</th>
+                        <th class="text-center col-3">Q1</th>
+                        <!--<th class="text-center col-1">Answer 1</th>-->
+                        <th class="text-center col-3">Q2</th>
+                        <!--<th class="text-center col-1">Answer 2</th>-->
+                        <th class="text-center col-3">Q3</th>
+                        <!--<th class="text-center col-1">Answer 3</th>-->
                     <% } %>
                 </tr>
 
                 <!-- Repeatable Template Row -->
 
-                <% for(let count = 0; count < BookList.length; count++) { %>
+                <% for(let count = 0; count < SurveyList.length; count++) { %>
                     <tr class="d-flex">
                         <% if(typeof displayName == 'string' && displayName) { %>
-                            <td class="text-center col-2"><%= BookList[count].name %></td>
-                            <td class="text-center col-2"><%= BookList[count].author %></td>
-                            <td class="text-center col-1"><%= BookList[count].published %></td>
-                            <td class="col-4"><%= BookList[count].description %></td>
-                            <td class="text-center col-1"><%= BookList[count].price %></td>            
+                            <td class="text-center col-2"><%= SurveyList[count].name %></td>
+                            <td class="text-center col-2"><%= SurveyList[count].question1 %></td>
+                            <td class="text-center col-1"><%= SurveyList[count].answer1 %></td>
+                            <td class="text-center col-2"><%= SurveyList[count].question2 %></td>
+                            <td class="text-center col-1"><%= SurveyList[count].answer2 %></td>    
+                            <td class="text-center col-2"><%= SurveyList[count].question3 %></td>
+                            <td class="text-center col-1"><%= SurveyList[count].answer3 %></td>        
+                            
+                            
+                            
                             <td class="text-center col-1">
-                                <a href="/book-list/edit/<%= BookList[count]._id %>" class="btn btn-primary btn-sm">
+                                <a href="/book-list/edit/<%= SurveyList[count]._id %>" class="btn btn-primary btn-sm">
                                 <i class="fas fa-pencil-alt"></i> Edit</a>
                             </td>
                             <td class="text-center col-1">
-                                <a href="/book-list/delete/<%= BookList[count]._id %>" class="btn btn-danger btn-sm">
+                                <a href="/book-list/delete/<%= SurveyList[count]._id %>" class="btn btn-danger btn-sm">
                                 <i class="fas fa-trash-alt"></i> Delete</a>
                             </td>
                          <% } else { %>
-                            <td class="text-center col-2"><%= BookList[count].name %></td>
-                            <td class="text-center col-2"><%= BookList[count].author %></td>
-                            <td class="text-center col-1"><%= BookList[count].published %></td>
-                            <td class="col-6"><%= BookList[count].description %></td>
-                            <td class="text-center col-1"><%= BookList[count].price %></td>  
+                            <td class="text-center col-3"><%= SurveyList[count].name %></td>
+                            <td class="text-center col-3"><%= SurveyList[count].question1 %></td>
+                          
+                            <td class="text-center col-3"><%= SurveyList[count].question2 %></td>
+                            
+                            <td class="text-center col-3"><%= SurveyList[count].question3 %></td>
+                           
                          <% } %>
                     </tr>
                 <% } %>
