--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -10,44 +10,72 @@
 
             <form class="form" method="POST">
                 <div class="form-group">
-                    <label for="nameTextField">Book Title</label>
+                    <label for="nameTextField">Survey Title</label>
                     <input type="text" class="form-control"
                     id="nameTextField"
-                    placeholder="Enter the Book Title"
+                    placeholder="Enter the Survey Title"
                     name="name" required>
                 </div>
+                
+                <!--Question 1-->
 
                 <div class="form-group">
-                    <label for="authorTextField">Author</label>
+                    <label for="question1TextField">Question 1</label>
                     <input type="text" class="form-control"
-                    id="authorTextField"
-                    placeholder="Enter the Book's Author"
-                    name="author" required>
+                    id="question1TextField"
+                    placeholder="Enter the First Question"
+                    name="question1" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="publishedTextField">Year</label>
+                    <label for="answer1TextField">Answer 1 Type</label>
                     <input type="text" class="form-control"
-                    id="publishedTextField"
-                    placeholder="Enter the Year of Publication"
-                    name="published" required>
+                    id="answer1TextField"
+                    placeholder="Enter the type of answer (WIP only short answers)"
+                    name="answer1" required>
                 </div>
 
-                <div class="form-group">
-                    <label for="descriptionTextArea">Description</label>
-                    <textarea type="text" class="form-control"
-                    id="descriptionTextArea"
-                    placeholder="Enter the a brief description of the book"
-                    name="description" required></textarea>
-                </div>
+                 <!--Question 2-->
 
                 <div class="form-group">
-                    <label for="priceTextField">Price</label>
+                    <label for="question2TextField">Question 2</label>
                     <input type="text" class="form-control"
-                    id="priceTextField"
-                    placeholder="Enter the Book's Price"
-                    name="price" required>
+                    id="question2TextField"
+                    placeholder="Enter the Second Question"
+                    name="question2" required>
                 </div>
+
+                <div class="form-group">
+                    <label for="answer2TextField">Answer 2 Type</label>
+                    <input type="text" class="form-control"
+                    id="answer2TextField"
+                    placeholder="Enter the type of answer (WIP only short answers)"
+                    name="answer2" required>
+                </div>
+
+                <!--Question 3-->
+
+                <div class="form-group">
+                    <label for="question3TextField">Question 3</label>
+                    <input type="text" class="form-control"
+                    id="question3TextField"
+                    placeholder="Enter the Third Question"
+                    name="question3" required>
+                </div>
+
+                <div class="form-group">
+                    <label for="answer3TextField">Answer 3 Type</label>
+                    <input type="text" class="form-control"
+                    id="answer3TextField"
+                    placeholder="Enter the type of answer (WIP only short answers)"
+                    name="answer3" required>
+                </div>
+
+
+
+
+
+                 <!-- Buttons-->
 
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
