Edit survey Works Correctly

--- a/server/views/survey/list.ejs
+++ b/server/views/survey/list.ejs
@@ -55,11 +55,11 @@
                             
                             
                             <td class="text-center col-1">
-                                <a href="/book-list/edit/<%= SurveyList[count]._id %>" class="btn btn-primary btn-sm">
+                                <a href="/survey-list/edit/<%= SurveyList[count]._id %>" class="btn btn-primary btn-sm">
                                 <i class="fas fa-pencil-alt"></i> Edit</a>
                             </td>
                             <td class="text-center col-1">
-                                <a href="/book-list/delete/<%= SurveyList[count]._id %>" class="btn btn-danger btn-sm">
+                                <a href="/survey-list/delete/<%= SurveyList[count]._id %>" class="btn btn-danger btn-sm">
                                 <i class="fas fa-trash-alt"></i> Delete</a>
                             </td>
                          <% } else { %>
