--- a/server/views/survey/edit.ejs
+++ b/server/views/survey/edit.ejs
@@ -10,60 +10,81 @@
 
             <form class="form" method="POST">
                 <div class="form-group">
-                    <label for="nameTextField">Book Title</label>
+                    <label for="nameTextField">Survey Title</label>
                     <input type="text" class="form-control"
                     id="nameTextField"
-                    placeholder="Enter the Book Title"
+                    placeholder="Enter the Survey Title"
                     name="name" 
-                    value="<%= book.name %>"
+                    value="<%= survey.name %>"
                     required>
                 </div>
 
                 <div class="form-group">
-                    <label for="authorTextField">Author</label>
+                    <label for="question1TextField">Question 1</label>
                     <input type="text" class="form-control"
-                    id="authorTextField"
-                    placeholder="Enter the Book's Author"
-                    name="author" 
-                    value="<%= book.author %>"
+                    id="question1TextField"
+                    placeholder="Enter the First Question"
+                    name="question1" 
+                    value="<%= survey.question1 %>"
                     required>
                 </div>
 
                 <div class="form-group">
-                    <label for="publishedTextField">Year</label>
+                    <label for="answer1TextField">Answer 1</label>
                     <input type="text" class="form-control"
-                    id="publishedTextField"
-                    placeholder="Enter the Year of Publication"
-                    name="published" 
-                    value="<%= book.published %>"
+                    id="Answer1TextField"
+                    placeholder="Enter the type of answer (WIP only short answers)"
+                    name="answer1" 
+                    value="<%= survey.answer1 %>"
                     required>
                 </div>
-
+                
                 <div class="form-group">
-                    <label for="descriptionTextArea">Description</label>
-                    <textarea type="text" class="form-control"
-                    id="descriptionTextArea"
-                    placeholder="Enter the a brief description of the book"
-                    name="description" 
-                    required>
-                    <%= book.description %>
-                    </textarea>
-                </div>
-
-                <div class="form-group">
-                    <label for="priceTextField">Price</label>
+                    <label for="question2TextField">Question 2</label>
                     <input type="text" class="form-control"
-                    id="priceTextField"
-                    placeholder="Enter the Book's Price"
-                    name="price" 
-                    value="<%= book.price %>"
+                    id="question2TextField"
+                    placeholder="Enter the Second Question"
+                    name="question2" 
+                    value="<%= survey.question2 %>"
                     required>
                 </div>
+
+                <div class="form-group">
+                    <label for="answer2TextField">Answer 2</label>
+                    <input type="text" class="form-control"
+                    id="Answer2TextField"
+                    placeholder="Enter the type of answer (WIP only short answers)"
+                    name="answer2" 
+                    value="<%= survey.answer2 %>"
+                    required>
+                </div>
+                <div class="form-group">
+                    <label for="question3TextField">Question 3</label>
+                    <input type="text" class="form-control"
+                    id="question3TextField"
+                    placeholder="Enter the Third Question"
+                    name="question3" 
+                    value="<%= survey.question3 %>"
+                    required>
+                </div>
+
+                <div class="form-group">
+                    <label for="answer3TextField">Answer 3</label>
+                    <input type="text" class="form-control"
+                    id="Answer3TextField"
+                    placeholder="Enter the type of answer (WIP only short answers)"
+                    name="answer3" 
+                    value="<%= survey.answer3 %>"
+                    required>
+                </div>
+
+
+                
 
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
                 
-                    <a href="/book-list" class="btn btn-warning">
+                    <a href="/survey-list" class="btn btn-warning">
                         <i class="fas fa-undo"></i> Cancel</a>
 
             </form>
