Answer Survey working correctly ID based

--- a/server/views/index.ejs
+++ b/server/views/index.ejs
@@ -24,7 +24,7 @@
   
 
   <button type="button" class="btn btn-dark" onclick="window.location.href='/survey-list'">Survey List</button>
-  <button type="button" class="btn btn-dark" onclick="window.location.href='/services'">Services</button>
+  <button type="button" class="btn btn-dark" onclick="window.location.href='/survey-list/add'">Create Survey</button>
 </main>
 
 
