--- a/server/views/products.ejs
+++ b/server/views/products.ejs
@@ -18,25 +18,22 @@ https://appsmaventech.com/blog/The-Evolution-Of-Web-Development-Via-Machine-Lear
     <li class="media">
       <img src="/Assets/images/project1(128).png" class="mr-3" alt="Product 1 photo">
       <div class="media-body">
-        <h5 class="mt-0 mb-1">Automation Scripts @ Amdocs </h5>
-        While I was working in Amdocs, I automated several report creating tools, from Visual Basic macros for excel, 
-        to Python routines that integrated with other tools.
+        <h5 class="mt-0 mb-1">Example 1 </h5>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet venenatis urna cursus eget nunc scelerisque viverra mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Sed blandit libero volutpat sed cras ornare arcu dui. Aliquam purus sit amet luctus venenatis lectus magna fringilla
       </div>
     </li>
     <li class="media my-4">
       <img src="/Assets/images/project2(128).png" class="mr-3" alt="Product 2 photo">
       <div class="media-body">
-        <h5 class="mt-0 mb-1">JavaScript game "A Fly in my Tacos"</h5>
-        As part of an assignment for class COMP-125 at Centennial College, I developed a JavaScript based 
-        game where the player had to catch a fly to get points. The difficulty increased progressively.
+        <h5 class="mt-0 mb-1">Example 2"</h5>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet venenatis urna cursus eget nunc scelerisque viverra mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Sed blandit libero volutpat sed cras ornare arcu dui. Aliquam purus sit amet luctus venenatis lectus magna fringilla
       </div>
     </li>
     <li class="media">
       <img src="/Assets/images/project3(128).png" class="mr-3" alt="Product 3 photo">
       <div class="media-body">
-        <h5 class="mt-0 mb-1">SIAPPEP Project</h5>
-        Implementation of an Integral Management system of Digital Oilfield and Asset Optimization Technology (SIAPPEP),
-         in the Northern and Southern Regions ofPEMEX exploration and production (PEP).
+        <h5 class="mt-0 mb-1">Example 3</h5>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Amet venenatis urna cursus eget nunc scelerisque viverra mauris. Aliquet lectus proin nibh nisl condimentum id venenatis a. Sed blandit libero volutpat sed cras ornare arcu dui. Aliquam purus sit amet luctus venenatis lectus magna fringilla
       </div>
     </li>
   </ul>
