--- a/server/views/partials/main_nav.ejs
+++ b/server/views/partials/main_nav.ejs
@@ -24,7 +24,7 @@ FileName : main_nav.ejs
           <% } else { %>
         <li class="nav-item"></li>
         <% } %>
-        <a class="nav-link" href="/home"><i class="fas fa-lg fa-igloo"></i> Home </a>
+        <a class="nav-link" href="/home"><i class="fas fa-lg fa-home"></i> Home </a>
         </li>
 
 
