--- a/server/views/survey/answer.ejs
+++ b/server/views/survey/answer.ejs
@@ -8,7 +8,7 @@
         <div class="offset-md-3 col-md-6">
             <h1><%= title %></h1>
 
-            <form class="form" method="POST">
+            <form class="form" action="mailto:someone@example.com" method="post" enctype="text/plain"></form>
                 <div class="form-group">
                     <label for="nameTextField">Survey Title</label>
                     <input type="text" class="form-control"
