--- a/server/views/survey/answer.ejs
+++ b/server/views/survey/answer.ejs
@@ -33,9 +33,9 @@
                     <label for="answer1TextField">Answer 1</label>
                     <input type="text" class="form-control"
                     id="Answer1TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
+                    placeholder="<%= survey.answer1 %>"
                     name="answer1" 
-                    value="<%= survey.answer1 %>"
+                    value=""
                     required>
                 </div>
                 
@@ -53,9 +53,9 @@
                     <label for="answer2TextField">Answer 2</label>
                     <input type="text" class="form-control"
                     id="Answer2TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
+                    placeholder="<%= survey.answer2 %>"
                     name="answer2" 
-                    value="<%= survey.answer2 %>"
+                    value=""
                     required>
                 </div>
                 <div class="form-group">
@@ -72,9 +72,9 @@
                     <label for="answer3TextField">Answer 3</label>
                     <input type="text" class="form-control"
                     id="Answer3TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
+                    placeholder="<%= survey.answer3 %>"
                     name="answer3" 
-                    value="<%= survey.answer3 %>"
+                    value=""
                     required>
                 </div>
 
