--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -2,13 +2,14 @@
 
 <%- include ../partials/main_nav.ejs %>
 
+
 <!-- Content for the Add page -->
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
             <h1><%= title %></h1>
 
-            <form class="form" method="POST">
+            <form class="form" method="POST" id="form">
                 <div class="form-group">
                     <label for="nameTextField">Survey Title</label>
                     <input type="text" class="form-control"
@@ -35,48 +36,13 @@
                     name="answer1" required>
                 </div>
 
-                 <!--Question 2-->
+                <div class="form-group" id="questionarray">
 
-                <div class="form-group">
-                    <label for="question2TextField">Question 2</label>
-                    <input type="text" class="form-control"
-                    id="question2TextField"
-                    placeholder="Enter the Second Question"
-                    name="question2" required>
                 </div>
-
-                <div class="form-group">
-                    <label for="answer2TextField">Answer 2 Type</label>
-                    <input type="text" class="form-control"
-                    id="answer2TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
-                    name="answer2" required>
-                </div>
-
-                <!--Question 3-->
-
-                <div class="form-group">
-                    <label for="question3TextField">Question 3</label>
-                    <input type="text" class="form-control"
-                    id="question3TextField"
-                    placeholder="Enter the Third Question"
-                    name="question3" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="answer3TextField">Answer 3 Type</label>
-                    <input type="text" class="form-control"
-                    id="answer3TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
-                    name="answer3" required>
-                </div>
-
-
-
-
-
+                                       
                  <!-- Buttons-->
-
+                <button type="button" class="btn btn-primary" id="add">
+                    <i class="fas fa-edit"></i> Add Entry</button> 
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
                 
@@ -87,9 +53,19 @@
         </div>
 
     </div>
+    
 </div>
 
-
+<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
+<script type="text/javascript">
+$(document).ready(function(){
+ 
+var q = 1;
+ $('#add').click(function(){     
+    $("#questionarray").append('<label>Question</label><input type="text" class="form-control">')
+ });
+});
+</script>
 
 <%- include ../partials/bottom_nav.ejs %>  
 
