Last commit before trying arrays

--- a/server/views/survey/answer.ejs
+++ b/server/views/survey/answer.ejs
@@ -1,3 +1,15 @@
+<!--
+Authors: Jose Aguilar 301119671
+Kristopher Sabado - 301118188
+Muhammad Ali Asjid - 301105070 
+Hussan Mirza - 301069260
+
+Date: 11-15-2020
+FileName : answer.ejs
+
+Answer a survey view
+ -->
+
 <%- include ../partials/header.ejs %>
 
 <%- include ../partials/main_nav.ejs %>
