modified models for survey

--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -17,25 +17,25 @@
                     name="name" required>
                 </div>
                 
-                <!--Question 1-->
+                <!--Desxcription-->
 
                 <div class="form-group">
-                    <label for="question1TextField">Question 1</label>
+                    <label for="descriptionTextField">Description</label>
                     <input type="text" class="form-control"
-                    id="question1TextField"
-                    placeholder="Enter the First Question"
-                    name="question1" required>
+                    id="descriptionTextField"
+                    placeholder="Enter the Description of your Survey"
+                    name="description" required>
                 </div>
 
                 <div class="form-group">
-                    <label for="answer1TextField">Answer 1 Type</label>
+                    <label for="creatorTextField">Please enter the name of the creator</label>
                     <input type="text" class="form-control"
-                    id="answer1TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
+                    id="creatorTextField"
+                    placeholder="Enter your name"
                     name="answer1" required>
                 </div>
 
-                 <!--Question 2-->
+                 <!--Question 2
 
                 <div class="form-group">
                     <label for="question2TextField">Question 2</label>
@@ -53,7 +53,7 @@
                     name="answer2" required>
                 </div>
 
-                <!--Question 3-->
+                
 
                 <div class="form-group">
                     <label for="question3TextField">Question 3</label>
@@ -73,7 +73,7 @@
 
 
 
-
+-->
 
                  <!-- Buttons-->
 
