--- a/server/views/survey/edit.ejs
+++ b/server/views/survey/edit.ejs
@@ -20,65 +20,26 @@
                 </div>
 
                 <div class="form-group">
-                    <label for="question1TextField">Question 1</label>
+                    <label for="description1TextField">Description</label>
                     <input type="text" class="form-control"
-                    id="question1TextField"
-                    placeholder="Enter the First Question"
-                    name="question1" 
-                    value="<%= survey.question1 %>"
+                    id="descriptionTextField"
+                    placeholder="Please describe your survey"
+                    name="description" 
+                    value="<%= survey.description %>"
                     required>
                 </div>
 
                 <div class="form-group">
-                    <label for="answer1TextField">Answer 1</label>
+                    <label for="creatorTextField">Creator</label>
                     <input type="text" class="form-control"
-                    id="Answer1TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
-                    name="answer1" 
-                    value="<%= survey.answer1 %>"
+                    id="creatorTextField"
+                    placeholder="Enter your name"
+                    name="creator" 
+                    value="<%= survey.creator%>"
                     required>
                 </div>
                 
-                <div class="form-group">
-                    <label for="question2TextField">Question 2</label>
-                    <input type="text" class="form-control"
-                    id="question2TextField"
-                    placeholder="Enter the Second Question"
-                    name="question2" 
-                    value="<%= survey.question2 %>"
-                    required>
-                </div>
-
-                <div class="form-group">
-                    <label for="answer2TextField">Answer 2</label>
-                    <input type="text" class="form-control"
-                    id="Answer2TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
-                    name="answer2" 
-                    value="<%= survey.answer2 %>"
-                    required>
-                </div>
-                <div class="form-group">
-                    <label for="question3TextField">Question 3</label>
-                    <input type="text" class="form-control"
-                    id="question3TextField"
-                    placeholder="Enter the Third Question"
-                    name="question3" 
-                    value="<%= survey.question3 %>"
-                    required>
-                </div>
-
-                <div class="form-group">
-                    <label for="answer3TextField">Answer 3</label>
-                    <input type="text" class="form-control"
-                    id="Answer3TextField"
-                    placeholder="Enter the type of answer (WIP only short answers)"
-                    name="answer3" 
-                    value="<%= survey.answer3 %>"
-                    required>
-                </div>
-
-
+               
                 
 
                 <button class="btn btn-primary" type="submit">
