--- a/server/views/survey/list.ejs
+++ b/server/views/survey/list.ejs
@@ -19,23 +19,19 @@
                 <tr class="d-flex">
                     <% if(typeof displayName == 'string' && displayName) { %>
                         <th class="text-center col-2">Name</th>
-                        <th class="text-center col-2">Q1</th>
-                        <th class="text-center col-1">Answer 1</th>
-                        <th class="text-center col-2">Q2</th>
-                        <th class="text-center col-1">Answer 2</th>
-                        <th class="text-center col-2">Q3</th>
-                        <th class="text-center col-1">Answer 3</th>
+                        <th class="text-center col-2">Description</th>
+                        <th class="text-center col-1">Creator</th>
+                       
 
                         <th class="text-center col-1"></th>
                         <th class="text-center col-1"></th>
                     <% } else { %>
                         <th class="text-center col-3">Name</th>
-                        <th class="text-center col-3">Q1</th>
+                        <th class="text-center col-3">Description</th>
                         <!--<th class="text-center col-1">Answer 1</th>-->
-                        <th class="text-center col-3">Q2</th>
+                        <th class="text-center col-3">Creator</th>
                         <!--<th class="text-center col-1">Answer 2</th>-->
-                        <th class="text-center col-3">Q3</th>
-                        <!--<th class="text-center col-1">Answer 3</th>-->
+                       
                     <% } %>
                 </tr>
 
@@ -45,12 +41,9 @@
                     <tr class="d-flex">
                         <% if(typeof displayName == 'string' && displayName) { %>
                             <td class="text-center col-2"><%= SurveyList[count].name %></td>
-                            <td class="text-center col-2"><%= SurveyList[count].question1 %></td>
-                            <td class="text-center col-1"><%= SurveyList[count].answer1 %></td>
-                            <td class="text-center col-2"><%= SurveyList[count].question2 %></td>
-                            <td class="text-center col-1"><%= SurveyList[count].answer2 %></td>    
-                            <td class="text-center col-2"><%= SurveyList[count].question3 %></td>
-                            <td class="text-center col-1"><%= SurveyList[count].answer3 %></td>        
+                            <td class="text-center col-2"><%= SurveyList[count].description %></td>
+                            <td class="text-center col-1"><%= SurveyList[count].creator%></td>
+                                
                             
                             
                             
@@ -64,11 +57,11 @@
                             </td>
                          <% } else { %>
                             <td class="text-center col-3"><%= SurveyList[count].name %></td>
-                            <td class="text-center col-3"><%= SurveyList[count].question1 %></td>
+                            <td class="text-center col-3"><%= SurveyList[count].description %></td>
                           
-                            <td class="text-center col-3"><%= SurveyList[count].question2 %></td>
+                            <td class="text-center col-3"><%= SurveyList[count].creator %></td>
                             
-                            <td class="text-center col-3"><%= SurveyList[count].question3 %></td>
+                            
 
                             <td class="text-center col-1">
                                 <a href="/survey-list/answer/<%= SurveyList[count]._id %>" class="btn btn-primary btn-sm">
