--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -8,7 +8,7 @@
         <div class="offset-md-3 col-md-6">
             <h1><%= title %></h1>
 
-            <form class="form" method="POST">
+            <form class="form" method="POST" id="form">
                 <div class="form-group">
                     <label for="nameTextField">Survey Title</label>
                     <input type="text" class="form-control"
@@ -74,8 +74,22 @@
 
 
 -->
+<div class="form-group" id="questionarray">
+<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
+<script type="text/javascript">
+$(document).ready(function(){
+ 
+var q = 1;
+ $('#add').click(function(){     
+    $("#questionarray").append('<label>Question</label><input type="text" class="form-control">')
+ });
+});
+</script>
 
                  <!-- Buttons-->
+
+                 <button type="button" class="btn btn-primary" id="add">
+                    <i class="fas fa-edit"></i> Add Entry</button> 
 
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
