Added script to add individual Questions

--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -75,6 +75,7 @@
 
 -->
 <div class="form-group" id="questionarray">
+    </div>
 <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
 <script type="text/javascript">
 $(document).ready(function(){
