Survey Edition completely functional

--- a/server/views/survey/edit.ejs
+++ b/server/views/survey/edit.ejs
@@ -45,15 +45,34 @@
                     <input type="text" class="form-control"
                     id="questionTextField"
                     placeholder="Enter the First Question"
-                    name="question1" 
+                    name="questions" 
                     value="<%= survey.questions[count] %>"
-                    readonly>
+                    >
                 </div>
 
                 
                 <% } %>
-               
+                <div class="form-group" id="questions">
+                </div>
+            <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>
+            
+            <script type="text/javascript">
+            $(document).ready(function(){
+             
+            var q = 1;
+             $('#add').click(function(){     
+               $("#questions").append('<label>Question</label><input type="text" name=questions class="form-control">')
+               //newSurvey.questions.push('Text1');
+               //var x = document.createElement("INPUT");
+               //x.setAttribute("type", "text");
+            
+             });
+            });
+            </script>
                 
+
+                <button type="button" class="btn btn-primary" id="add">
+                    <i class="fas fa-edit"></i> Add Question</button> 
 
                 <button class="btn btn-primary" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
