--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -55,6 +55,7 @@ Add view
 <div class="form-group" id="questions">
     </div>
 <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>
+<script src="/jquery/jquery.js"></script>
 
 <script type="text/javascript">
 $(document).ready(function(){
