--- a/server/views/survey/edit.ejs
+++ b/server/views/survey/edit.ejs
@@ -66,7 +66,11 @@ Edit a survey view
                 <% } %>
                 <div class="form-group" id="questions">
                 </div>
-            <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>
+            <!--<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>-->
+
+
+            <%   import $ from 'jquery';
+window.jQuery = window.$ = $;$(selector).hide();%>
             
             <script type="text/javascript">
             $(document).ready(function(){
