Second Release Ready

--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -54,7 +54,7 @@ Add view
 
 <div class="form-group" id="questions">
     </div>
-<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>
+<!--<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>-->
 <script src="/public/Scripts/jquery.js"></script>
 
 <script type="text/javascript">
