--- a/server/views/survey/add.ejs
+++ b/server/views/survey/add.ejs
@@ -10,89 +10,50 @@ FileName : add.ejs
 Add view
  -->
 
-<%- include ../partials/header.ejs %>
+ <%- include ../partials/header.ejs %>
 
-<%- include ../partials/main_nav.ejs %>
-
-
-<!-- Content for the Add page -->
-<div class="container">
-    <div class="row">
-        <div class="offset-md-3 col-md-6">
-            <h1><%= title %></h1>
-
-            <form class="form" method="POST" id="form">
-                <div class="form-group">
-                    <label for="nameTextField">Survey Title</label>
-                    <input type="text" class="form-control"
-                    id="nameTextField"
-                    placeholder="Enter the Survey Title"
-                    name="name" required>
-                </div>
-                
-                <!--Desxcription-->
-
-                <div class="form-group">
-                    <label for="descriptionTextField">Description</label>
-                    <input type="text" class="form-control"
-                    id="descriptionTextField"
-                    placeholder="Enter the Description of your Survey"
-                    name="description" required>
-                </div>
-
-                <div class="form-group">
-                    <label for="creatorTextField">Please enter the name of the creator</label>
-                    <input type="text" class="form-control"
-                    id="creatorTextField"
-                    placeholder="Enter your name"
-                    name="creator" required>
-                </div>
-
-               
-
-
-
-<div class="form-group" id="questions">
-    </div>
-<!--<script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.5.1.js'></script>-->
-<script src="/public/Scripts/jquery.js"></script>
-
-<script type="text/javascript">
-$(document).ready(function(){
+ <%- include ../partials/main_nav.ejs %>
  
-var q = 1;
- $('#add').click(function(){     
-   
-   $("#questions").append('<label>Question</label><input type="text" name=questions class="form-control">')
-   //newSurvey.questions.push('Text1');
-   //var x = document.createElement("INPUT");
-   //x.setAttribute("type", "text");
-
- });
-});
-</script>
-
-
-
-                 <!-- Buttons-->
-
-                 <button type="button" class="btn btn-primary" id="add">
-                    <i class="fas fa-edit"></i> Add Question</button> 
-
-                <button class="btn btn-primary" type="submit">
-                    <i class="fas fa-edit"></i> Submit</button>
-                
-                    <a href="/survey-list" class="btn btn-warning">
-                        <i class="fas fa-undo"></i> Cancel</a>
-
-            </form>
-        </div>
-
-    </div>
-    
-</div>
-
-
-<%- include ../partials/bottom_nav.ejs %>  
-
-<%- include ../partials/footer.ejs %>
+ 
+ <!-- Content for the Add page -->
+ <div class="container">
+     <div class="row">
+         <div class="offset-md-3 col-md-6">
+             <h1><%= title %></h1>
+ 
+             <form class="form" method="POST" id="form">
+                 <div class="form-group">
+                     <label for="nameTextField">Survey Title</label>
+                     <input type="text" class="form-control"
+                     id="nameTextField"
+                     placeholder="Enter the Survey Title"
+                     name="name" required>
+                 </div>
+                 
+                 <!--Survey Description-->
+ 
+                 <div class="form-group">
+                     <label for="surveyDescTextField">Survey Description</label>
+                     <input type="text" class="form-control"
+                     id="surveyDesc"
+                     placeholder="Enter Survey Description"
+                     name="surveyDesc" required>
+                 </div>                
+                                        
+                  <!-- Buttons-->
+                 <a href="/survey-list/question" class="btn btn-primary" role="button">
+                 <i class="fas fa-edit"></i> Next</a>
+                 
+                 <a href="/survey-list" class="btn btn-warning">
+                     <i class="fas fa-undo"></i> Cancel</a>
+ 
+             </form>
+         </div>
+ 
+     </div>
+     
+ </div>
+ 
+ <%- include ../partials/bottom_nav.ejs %>  
+ 
+ <%- include ../partials/footer.ejs %>
