--- a/server/views/survey/answer.ejs
+++ b/server/views/survey/answer.ejs
@@ -20,7 +20,7 @@ Answer a survey view
         <div class="offset-md-3 col-md-6">
             <h1><%= title %></h1>
 
-            <form class="form" action="mailto:someone@example.com" method="post" enctype="text/plain">
+            <form class="form"  method="POST" >
                 <div class="form-group">
                     <label for="nameTextField">Survey Title</label>
                     <input type="text" class="form-control"
@@ -31,67 +31,7 @@ Answer a survey view
                     readonly>
                 </div>
 
-              <!--  <div class="form-group">
-                    <label for="question1TextField">Question 1</label>
-                    <input type="text" class="form-control"
-                    id="question1TextField"
-                    placeholder="Enter the First Question"
-                    name="question1" 
-                    value="<%= survey.question1 %>"
-                    readonly>
-                </div>
-
-                <div class="form-group">
-                    <label for="answer1TextField">Answer 1</label>
-                    <input type="text" class="form-control"
-                    id="Answer1TextField"
-                    placeholder="<%= survey.answer1 %>"
-                    name="answer1" 
-                    value=""
-                    required>
-                </div>
-                
-                <div class="form-group">
-                    <label for="question2TextField">Question 2</label>
-                    <input type="text" class="form-control"
-                    id="question2TextField"
-                    placeholder="Enter the Second Question"
-                    name="question2" 
-                    value="<%= survey.question2 %>"
-                    readonly>
-                </div>
-
-                <div class="form-group">
-                    <label for="answer2TextField">Answer 2</label>
-                    <input type="text" class="form-control"
-                    id="Answer2TextField"
-                    placeholder="<%= survey.answer2 %>"
-                    name="answer2" 
-                    value=""
-                    required>
-                </div>
-                <div class="form-group">
-                    <label for="question3TextField">Question 3</label>
-                    <input type="text" class="form-control"
-                    id="question3TextField"
-                    placeholder="Enter the Third Question"
-                    name="question3" 
-                    value="<%= survey.question3 %>"
-                    readonly>
-                </div>
-
-                <div class="form-group">
-                    <label for="answer3TextField">Answer 3</label>
-                    <input type="text" class="form-control"
-                    id="Answer3TextField"
-                    placeholder="<%= survey.answer3 %>"
-                    name="answer3" 
-                    value=""
-                    required>
-                </div>
-
-
--->
+             
 
 
                  <!-- Repeatable Template Row -->
@@ -102,7 +42,7 @@ Answer a survey view
                         <input type="text" class="form-control"
                         id="questionTextField"
                         placeholder="Enter the First Question"
-                        name="question1" 
+                        name="questions" 
                         value="<%= survey.questions[count] %>"
                         readonly>
                     </div>
@@ -112,7 +52,7 @@ Answer a survey view
                         <input type="text" class="form-control"
                         id="AnswerTextField"
                         placeholder="Please enter a response"
-                        name="answer" 
+                        name="answers" 
                         value=""
                         required>
                     </div>
