--- a/server/views/survey/answer.ejs
+++ b/server/views/survey/answer.ejs
@@ -15,6 +15,10 @@ Answer a survey view
 <%- include ../partials/main_nav.ejs %>
 
 <!-- Content for the Add page -->
+
+<div class="spinner-grow text-danger" role="status">
+    <span class="visually-hidden"></span>
+  </div>
 <div class="container">
     <div class="row">
         <div class="offset-md-3 col-md-6">
@@ -61,7 +65,7 @@ Answer a survey view
 
                 
 
-                <button class="btn btn-primary" type="submit">
+                <button class="btn btn-primary btn-submit" type="submit">
                     <i class="fas fa-edit"></i> Submit</button>
                 
                     <a href="/survey-list" class="btn btn-warning">
