--- a/server/views/survey/answer_list.ejs
+++ b/server/views/survey/answer_list.ejs
@@ -23,77 +23,10 @@ List of all answers Views
  
 
 
-             <div class="accordion" id="accordionExample275">
-                <div class="card z-depth-0 bordered">
-                  <div class="card-header" id="headingOne2">
-                    <h5 class="mb-0">
-                      <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne2"
-                        aria-expanded="true" aria-controls="collapseOne2">
-                        Collapsible Group Item #1
-                      </button>
-                    </h5>
-                  </div>
-                  <div id="collapseOne2" class="collapse" aria-labelledby="headingOne2"
-                    data-parent="#accordionExample275">
-                    <div class="card-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                      wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                      eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                      assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                      nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                      farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                      labore sustainable.
-                    </div>
-                  </div>
-                </div>
-                <div class="card z-depth-0 bordered">
-                  <div class="card-header" id="headingTwo2">
-                    <h5 class="mb-0">
-                      <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                        data-target="#collapseTwo2" aria-expanded="false" aria-controls="collapseTwo2">
-                        Collapsible Group Item #2
-                      </button>
-                    </h5>
-                  </div>
-                  <div id="collapseTwo2" class="collapse" aria-labelledby="headingTwo2"
-                    data-parent="#accordionExample275">
-                    <div class="card-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                      wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                      eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                      assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                      nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                      farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                      labore sustainable.
-                    </div>
-                  </div>
-                </div>
-                <div class="card z-depth-0 bordered">
-                  <div class="card-header" id="headingThree2">
-                    <h5 class="mb-0">
-                      <button class="btn btn-link collapsed" type="button" data-toggle="collapse"
-                        data-target="#collapseThree2" aria-expanded="false" aria-controls="collapseThree2">
-                        Collapsible Group Item #3
-                      </button>
-                    </h5>
-                  </div>
-                  <div id="collapseThree2" class="collapse" aria-labelledby="headingThree2"
-                    data-parent="#accordionExample275">
-                    <div class="card-body">
-                      Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-                      wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-                      eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-                      assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-                      nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-                      farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-                      labore sustainable.
-                    </div>
-                  </div>
-                </div>
-              </div>
+             
 <% for(let count = 0; count < ResponseList.length; count++) { %>
-<p><%= count %> count</p>
-<p><%= ResponseList[count].name %></p>
+
+
 <div class="accordion" id="accordionExample275">
     <div class="card z-depth-0 bordered">
       <div class="card-header" id="headingOne2">
@@ -107,15 +40,13 @@ List of all answers Views
       <div id="collapseOne<%= count %>" class="collapse" aria-labelledby="headingOne2"
         data-parent="#accordionExample275">
         <div class="card-body">
-          Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3
-          wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum
-          eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla
-          assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred
-          nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer
-          farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus
-          labore sustainable.
-          <p>count</p>
-          <p><%= ResponseList[count].name %></p>
+          
+          
+          <h3><%= ResponseList[count].name %></h3>
+          <% for(let count2 = 0; count2 < ResponseList[count].questions.length; count2++) { %>
+          <b><%= ResponseList[count].questions[count2] %></b>
+          <p><%= ResponseList[count].answers[count2] %></p>
+          <% } %>
 
         </div>
       </div>
